<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_add_to_playlist_layout1"
    android:background="@drawable/media_player_background_color">
    <RelativeLayout
        android:id="@+id/activity_add_to_playlist_layout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1">
        <TextView
            android:id="@+id/activity_add_to_playlist_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@android:color/background_light"
            android:textSize="18dp"
            android:text="Add to playlist"
            android:layout_centerInParent="true"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/back_button_to_mediaplayer"
            android:src="@drawable/back_button"
            android:padding="8dp"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/activity_add_to_playlist_layout3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2">
        <Button
            android:id="@+id/new_playlist_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:layout_centerInParent="true"
            android:text="NEW PLAYLIST "
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:textSize="18dp"
            android:textColor="@android:color/background_light"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/activity_add_to_playlist_layout4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7">

        <ListView
            android:id="@+id/playlists_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <ProgressBar
            android:id="@+id/playlists_progress_bar"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:id="@+id/something_wrong_layout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:visibility="gone">
            <TextView
                android:id="@+id/something_wrong_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@android:color/background_light"
                android:text="something went wrong"
                android:gravity="center"/>
            <Button
                android:id="@+id/try_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/transparent_rounded_button"
                android:text="Try Again"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:textSize="14dp"
                android:layout_marginTop="32dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/background_light"/>
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>