...
            android:textStyle="bold" />

        <EditText
            android:layout_marginTop="80dp"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:id="@+id/playlist_name_edit_text"
            android:gravity="center"
            android:hint="Playlist Name"
            android:textColor="@color/cardview_light_background"
            android:inputType="text" />
        <LinearLayout
            android:id="@+id/activity_create_playlist_layout3"
...
