<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/activity_media_player_layout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_views_container"
        android:orientation="vertical"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/media_player_background_color">

        <RelativeLayout
            android:id="@+id/top_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.09"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">
            <ImageView
                android:id="@+id/arrow"
                android:layout_marginLeft="16dp"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/down_arrow"/>

            <TextView
                android:id="@+id/header"
                android:text="@string/playlist_header"
                android:textColor="@android:color/background_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"/>

            <TextSwitcher
                android:id="@+id/playlist_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:inAnimation="@android:anim/fade_in"
                android:outAnimation="@android:anim/fade_out"
                android:layout_below="@id/header"/>
            <ImageView
                android:layout_width="50dp"
                android:id="@+id/song_settings_button"
                android:layout_height="match_parent"
                android:src="@drawable/more_options"
                android:layout_marginRight="16dp"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <ImageView
            android:id="@+id/song_image"
            android:scaleType="centerCrop"
            android:layout_weight="0.55"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/default_image"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            />
        <LinearLayout
            android:id="@+id/activity_media_player_layout2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.14"
            android:orientation="vertical"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp">
            <TextSwitcher
                android:id="@+id/song_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:inAnimation="@android:anim/fade_in"
                android:outAnimation="@android:anim/fade_out"/>
            <TextSwitcher
                android:id="@+id/song_artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:inAnimation="@android:anim/fade_in"
                android:outAnimation="@android:anim/fade_out"/>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/activity_media_player_layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_weight="0.04">
            <SeekBar
                android:id="@+id/seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:max="100"
                android:thumb="@drawable/thumb"
                />
            <TextSwitcher
                android:id="@+id/start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:inAnimation="@android:anim/fade_in"
                android:outAnimation="@android:anim/fade_out"
                android:layout_below="@id/seek_bar"/>
            <TextSwitcher
                android:id="@+id/end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inAnimation="@android:anim/fade_in"
                android:outAnimation="@android:anim/fade_out"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16dp"
                android:layout_below="@id/seek_bar"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/activity_media_player_layout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_weight="0.07"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginBottom="32dp">

            <ImageView
                android:id="@+id/favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="8dp"
                android:layout_weight="1"
                android:src="@drawable/favorite_border"/>
            <ImageView
                android:id="@+id/previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_weight="1"
                android:src="@drawable/skip_previous"/>
            <ImageView
                android:id="@+id/play"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerVertical="true"
                android:src="@drawable/play"
                android:layout_weight="0.12"
                android:layout_centerInParent="true"/>
            <ImageView
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/play"
                android:layout_weight="1"
                android:src="@drawable/skip_next"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/favorite_border"
                android:visibility="invisible"
                android:padding="8dp"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/song_settings"/>
    <include layout="@layout/sleep_timer"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>


