...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:id="@+id/settings_like">
            <ImageView
                android:id="@+id/favorite2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:src="@drawable/like"/>
            <TextView
                android:id="@+id/song_settings_text1"
...
            android:id="@+id/sleep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/timer_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:src="@drawable/sleep_timer"/>
            <TextView
                android:id="@+id/song_settings_text4"
...
