...
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@android:color/background_light"
                    android:gravity="center_vertical"
                    android:text="5 minutes"
                    android:textStyle="bold"
                    android:id="@+id/five"
                    android:background="@android:color/transparent"
                    android:textAllCaps="false"

                    android:textSize="18dp"
                    android:layout_marginLeft="8dp"/>
            </LinearLayout>
...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="gone"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:id="@+id/turn_of_timer">
                <TextView
                    android:id="@+id/sleep_timer_text6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@android:color/background_light"
                    android:gravity="center_vertical"
...
